--- a/app/src/main/res/menu/menu_stocks.xml
+++ b/app/src/main/res/menu/menu_stocks.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.github.abhrp.stocksdemo.ui.activities.StocksActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_refresh"
         android:orderInCategory="100"
+        android:icon="@drawable/ic_refresh"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
