--- a/app/src/main/res/layout/activity_company_details.xml
+++ b/app/src/main/res/layout/activity_company_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/screen_background_color"
     tools:context=".ui.activities.CompanyDetailsActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -22,5 +23,11 @@
             app:subtitleTextColor="@color/subtitle_color"
             app:titleTextColor="@color/title_color" />
     </android.support.design.widget.AppBarLayout>
-    <include layout="@layout/content_company_details" />
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/company_details"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <include layout="@layout/content_company_details" />
+    </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
